# GeLiSo

./: CMakeCache.txt  CMakeLists.txt  README  build.sh  index.html  params.json  quickbuild.sh  socket.lisp
OMworkspace/OMworkspace/: preferences.lisp  wsparams.lisp
OMworkspace/OMworkspace/elements/: patchRel.omp  patchrel - easy transformations.omp  patchrel - easy version.omp  patchrel - intro .omp  patchrel - pachelbel.omp  test.omp
OMworkspace/OMworkspace/elements/CP2012_MIDI/: .finderinfo  c++ solution checker.omp  checker.omp  get chord seq for one track.omp  midipatch.omp
OMworkspace/OMworkspace/elements/ICMC2012/: .finderinfo  patchrel - intro .omp
OMworkspace/OMworkspace/elements/icmc2012 presentation/: .finderinfo  no all complete simul chords.omp  pattern constraint.omp  score harmonization.omp
OMworkspace/OMworkspace/elements/mume2012/: .finderinfo
OMworkspace/OMworkspace/elements/mume2012/comparison with strasheela/: .finderinfo  harmony with the filter constraint.omp
OMworkspace/OMworkspace/elements/mume2012/constraints from ICMC2012/: .finderinfo
OMworkspace/OMworkspace/elements/mume2012/feedback loop + concatenation/: .finderinfo
OMworkspace/OMworkspace/elements/mume2012/fractal music/: .finderinfo  essayer de trouver le document sur is music fractal.omp  fractal music 1.omp  fractal music 2.omp
OMworkspace/OMworkspace/elements/mume2012/lindenmayer systems/: .finderinfo  fractal lindenmayer.omp  grp-identical.lisp  lilypond-1.omp  lilypond.omp  lindenmayer comparison with strasheela.omp  lindenmayer1.omp  lindenmayer2.omp  lindenmayerwithconstraint1.omp  lindenmayerwithconstraint2.omp
OMworkspace/OMworkspace/elements/mume2012/markov constraints (+ comparison with pachet and roy)/: .finderinfo  markov.omp
OMworkspace/OMworkspace/elements/mume2012/subgraph pattern matching/: .finderinfo
OMworkspace/OMworkspace/user/: .finderinfo
easytests/: test_client.cpp  test_client.lisp  test_server.cpp
easytests/asio_tutorials/: daytime1.cpp  daytime2.cpp  timer1.cpp  timer2.cpp  timer3.cpp  timer4.cpp
easytests/zeromq/: testclient.lisp  testserver.cpp
help file/: Makefile  compile in C.txt  divide  divide.cpp  follow  follow.cpp  join  join.cpp
lispsources/: GeLiSo.lisp  GecodeManager.lisp  channel.lisp  load.lisp  main.lisp  map.lisp  translator.lisp
lispsources/open music add-ons/: CPRel_utils.lisp
lispsources/tests/: test.lisp
src/: main.cpp  test_client.lisp  test_server.cpp
src/GeLiSo/: geliso.cpp  geliso.hh
src/asio_tutorials/: timer1.cpp  timer5.cpp
src/channel/: channel.cpp  channel.hh
src/map/: map.hh
src/translator/: translator.cpp  translator.hh
src/varmap/: varmap.hh
